--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="web-root/css/style.css"/>
     <title>Temas Desarrollo en Entorno Servidor</title>
 </head>
 <body>
-    
+    <header>Pagina de David</header>
+    <footer>Footer de David</footer>
 </body>
 </html>
