--- a/codigo/Tema2/indexTema2.html
+++ b/codigo/Tema2/indexTema2.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="web-root/css/style.css"/>
+    <link rel="stylesheet" href="../../web-root/css/style.css"/>
     <title>Temas Desarrollo en Entorno Servidor</title>
 </head>
 <body>
-    <header>Pagina de David</header>
+    <header>
+        <h1>Pagina de David</h1>
+        <h2>Index principal del Tema 2</h2>
+    </header>
     <main>
-        <a href="codigo/Tema2/indexTema2.html">Tema 2</a>
+        
     </main>
     <footer>Footer de David</footer>
 </body>
