Primeras pruebas variables por la mitad

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <header>Pagina de David</header>
     <main>
-        <a href="codigo/Tema2/indexTema2.html">Tema 2</a>
+        <a href="codigo/Tema2/indexTema2.php">Tema 2</a>
+        <a href="codigo/Tema2/variables.php">Variables</a>
     </main>
     <footer>Footer de David</footer>
 </body>
