--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="web-root/css/resetCSS.css"/>
     <link rel="stylesheet" href="web-root/css/style.css"/>
-    <title>Temas Desarrollo en Entorno Servidor</title>
+    <title>Tema 2</title>
 </head>
 <body>
-    <header>Pagina de David</header>
+    <header>
+        <img class="logo" src="../web-rootPrincipal/imgPrincipal/LogotipoDavid.jpg"/>
+        <h1>Index Tema 2</h1>
+    </header>
     <main>
-        <a href="codigo/Tema2/indexTema2.php">Tema 2</a>
-        <a href="codigo/Tema2/variables.php">Variables</a>
+        <a class="boton" href="codigo/Tema2/indexTema2.php">Tema 2</a>
+        <a  class="boton" href="codigo/Tema2/variables.php">Variables</a>
     </main>
-    <footer>Footer de David</footer>
+    <footer>
+        <p>Footer de David</p>
+    </footer>
 </body>
 </html>
