--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <h1>Index Tema 2</h1>
     </header>
     <main>
-        <a class="boton" href="codigo/Tema2/indexTema2.php">Tema 2</a>
-        <a  class="boton" href="codigo/Tema2/variables.php">Variables</a>
+        <a class="boton" href="codigo/indexTema2.php">Tema 2</a>
+        <a  class="boton" href="codigo/variables.php">Variables</a>
     </main>
     <footer>
         <p>Footer de David</p>
