--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="web-root/css/resetCSS.css"/>
-    <link rel="stylesheet" href="web-root/css/style.css"/>
+    <link rel="stylesheet" href="./web-root/css/style.css"/>
     <title>Tema 2</title>
+    
 </head>
 <body>
     <header>
@@ -18,7 +19,9 @@
         <a  class="boton" href="codigo/variables.php">Variables</a>
     </main>
     <footer>
-        <p>Footer de David</p>
+        
+        <p>Footer de David </p>
+        <a href="../index.html"><img src="./web-root/img/volver.png" height="20px"></a>
     </footer>
 </body>
 </html>
