--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
     <link rel="stylesheet" href="web-root/css/resetCSS.css"/>
     <link rel="stylesheet" href="./web-root/css/style.css"/>
     <title>Tema 2</title>
+    <style>
+        .boton1
+        {
+            -webkit-transition: 1s ease-in-out;
+            transition: 1s ease-in-out;
+        }
+        .boton1:hover
+        {
+            -webkit-transform: scale(.85);
+            transform: scale(.85);
+        }
+
+        .boton2
+        {
+            -webkit-transition: 1s ease-in;
+            transition: 1s ease-in;
+        }
+
+        .boton2:hover
+        {
+            -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+        }
+    </style>
     
 </head>
 <body>
@@ -15,8 +39,8 @@
         <h1>Index Tema 2</h1>
     </header>
     <main>
-        <a class="boton" href="codigo/indexTema2.php">Tema 2</a>
-        <a  class="boton" href="codigo/variables.php">Variables</a>
+        <a class="boton boton1" href="codigo/indexTema2.php">Tema 2</a>
+        <a  class="boton boton2" href="codigo/variables.php">Variables</a>
     </main>
     <footer>
         
