--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         }
         .boton1:hover
         {
+            background-color: #9c102c;
             -webkit-transform: scale(.85);
             transform: scale(.85);
         }
