--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <main>
         <a class="boton boton1" href="codigo/indexTema2.php">Tema 2</a>
-        <a  class="boton boton" href="codigo/variables.php">Variables</a>
+        <a  class="boton boton1" href="codigo/variables.php">Variables</a>
     </main>
     <footer>
         
